--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,35 +7,35 @@ body {
   margin: 0;
   padding: 0;
 }
-.dhiwise-code,
-.dhiwise-navigation {
+.brochure-code,
+.brochure-navigation {
   min-height: 100%;
 }
 .common-pointer {
   cursor: pointer;
 }
-.dhiwise-navigation {
+.brochure-navigation {
   padding: 20px;
   background-color: #232323;
 }
-.dhiwise-navigation h1 {
+.brochure-navigation h1 {
   color: white;
 }
-.dhiwise-navigation .headline {
+.brochure-navigation .headline {
   font-size: 14px;
   margin-bottom: 10px;
   color: white;
 }
-.dhiwise-navigation ul {
+.brochure-navigation ul {
   padding: 0;
 }
-.dhiwise-navigation ul li {
+.brochure-navigation ul li {
   list-style: none;
   margin-right: 20px;
   font-size: 16px;
   font-weight: bold;
 }
-.dhiwise-navigation a {
+.brochure-navigation a {
   color: #132cdc;
 }
 table {
